@@ -1,4 +1,4 @@
-.\"	$NetBSD: altq.conf.5,v 1.11 2007/04/13 18:17:38 plunky Exp $
+.\"	$NetBSD: altq.conf.5,v 1.12 2008/09/11 17:58:59 joerg Exp $
 .\"	$KAME: altq.conf.5,v 1.15 2002/11/17 02:51:49 kjc Exp $
 .\"
 .\" Copyright (C) 2000
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd October 12, 2006
+.Dd September 10, 2008
 .Dt ALTQ.CONF 5
 .Os
 .\"
@@ -722,6 +722,8 @@ specifies a hashing policy by IP destination address.
 specifies a hashing policy by IP addresses and ports.
 .Cm srcport
 specifies a hashing policy by IP source port number.
+.Cm srcaddr
+specifies a hashing policy by IP source address.
 Default is
 .Cm dstaddr
 .El
